tests/rosetta/out/Zig/99-bottles-of-beer-2.error
zig build: exit status 1
/tmp/99-bottles-of-beer-2.zig:116:13: error: local variable is never mutated
/tmp/99-bottles-of-beer-2.zig:116:13: note: consider using 'const'
